[package]
name = "cucumber-rust-example"
description = ""
version = "0.0.0"
authors = []
edition = "2018"
repository = "https://github.com/bbqsrc/cucumber-rust-example"
license = "CC0-1.0"

[dependencies]
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
cucumber_rust = "0.8.4"
