[package]
name = "cucumber-rust-example"
description = ""
version = "0.0.0"
authors = []
edition = "2018"
repository = "https://github.com/bbqsrc/cucumber-rust-example"
license = "CC0-1.0"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dependencies]
# You can use any executor you want, but we're going to use Tokio in this example.
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time"] }

# We also demonstrate how to do stuff with a database. We'll use in memory sqlite.
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }

[dev-dependencies]
cucumber_rust = { git = "https://github.com/bbqsrc/cucumber-rust", branch = "main" }
